# blog

./: .gitignore  2017-11-02-dockerlanguageharmful.org  TAGS  about.org  about.rst  blog.cabal  contact.markdown  index.html  mkpost.sh  site.hs  stack.yaml
css/: default.css
posts/: 2017-06-03-herewegoagain.md  2017-06-05-adventuresinsparcp1.md  2017-06-22-adventuresinsparcp2.org  2017-06-27-illumosgetsitright.org  2017-08-28-lyingwithzfs.org  2017-08-30-bigwinfreebsd.org  2017-12-29-yearinreview.org  2018-01-07-complainaboutsoftwaremore.org  2018-04-12-projects-we-owe-openbsd.org  2018-08-04-5-things-i-love-about-5-operating-systems-i-use.org  2021-07-04-OperatingSystemsComparsionFreeBSD.org
src/: Series.hs  site.hs
templates/: default.html  post-list.html  post.html
