name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs: src
  other-modules: Series
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
